Fix title error message styling
fixes RCX-3320
flag=none

Test Plan:
 - Go to Pages
 - Make a new page
 - Save with empty title
 * Error mesage styling looks good
 * doesn't overlap with input

 - Add title of 256+ characters
 - Save
 * Error message styling looks good
 * doesn't overlap with input

 * Rest of the wiki page form looks the same

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/375505
QA-Review: Eric Saupe <eric.saupe@instructure.com>
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Kata Virag Keri <kata.keri@instructure.com>

--- a/app/stylesheets/bundles/wiki_page.scss
+++ b/app/stylesheets/bundles/wiki_page.scss
@@ -115,3 +115,8 @@
   // reset global style, let instui handle it
   box-shadow: initial;
 }
+
+// app/stylesheets/components/_ic-typography.scss:268 causes an issue with instui 10
+#edit_wikipage_title_container > div > label {
+  display: grid;
+}
